[gd_scene load_steps=49 format=2]

[ext_resource path="res://assets/States-of-India.png" type="Texture" id=1]
[ext_resource path="res://assets/0.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://timesbd.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/map_background.png" type="Texture" id=5]
[ext_resource path="res://assets/new_styleboxflat.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.25098, 0.34902, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.501961, 0.596078, 0.905882, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.419608, 0.533333, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.25098, 0.34902, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.501961, 0.596078, 0.905882, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.419608, 0.533333, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.25098, 0.34902, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.501961, 0.596078, 0.905882, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.419608, 0.533333, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.25098, 0.34902, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.501961, 0.596078, 0.905882, 1 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 22, 10 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 21.064, 10.4983 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 21.8613, 10.6082 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 16.5126, 5.86536 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 26.608, 10 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 16.6349, 6.38803 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 13.6081, 6.6317 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 30.9157, 9.01007 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 35.4573, 10 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 12.1158, 10 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 15.6317, 10 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 23.4088, 5.94414 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 7.8718, 39.8707 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 14.3105, 7.26321 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 21.0894, 6.85507 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 19.1535, 8.40402 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 16.36, 7.38693 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 19.6979, 6.65581 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 22.012, 8.66115 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 14.3863, 10.5329 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 10, 27.7347 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 16.9494, 11.1809 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 27.9455, 7.11917 )

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 38.8039, 9.07611 )

[sub_resource type="RectangleShape2D" id=38]

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 23.6, 10 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 25.3611, 10 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 6.64674, 14.8008 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 22.503, 10 )

[node name="Screen" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 561.997, 299.999 )
texture = ExtResource( 5 )

[node name="States-of-India" type="Sprite" parent="."]
position = Vector2( 285, 300 )
texture = ExtResource( 1 )

[node name="Question" type="Sprite" parent="."]
position = Vector2( 844, 171 )
texture = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
margin_left = 466.0
margin_top = 12.0
margin_right = 586.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score:
0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerDisp" type="Label" parent="."]
margin_left = 348.891
margin_top = 11.3214
margin_right = 448.891
margin_bottom = 76.3214
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Timer:
0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
__meta__ = {
"_editor_description_": ""
}

[node name="A" type="Button" parent="."]
margin_left = 571.0
margin_top = 377.0
margin_right = 829.0
margin_bottom = 443.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Button" parent="."]
margin_left = 854.888
margin_top = 378.0
margin_right = 1112.89
margin_bottom = 444.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="Button" parent="."]
margin_left = 572.297
margin_top = 484.0
margin_right = 830.297
margin_bottom = 550.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="Button" parent="."]
margin_left = 854.059
margin_top = 484.0
margin_right = 1112.06
margin_bottom = 550.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gujarat" type="Area2D" parent="."]
position = Vector2( 77.9439, 283.462 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gujarat"]
shape = SubResource( 14 )

[node name="Rajasthan" type="Area2D" parent="."]
position = Vector2( 116.399, 211.662 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rajasthan"]
shape = SubResource( 14 )

[node name="Jammu" type="Area2D" parent="."]
position = Vector2( 175.188, 65.5213 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jammu"]
shape = SubResource( 15 )

[node name="Himanchal" type="Area2D" parent="."]
position = Vector2( 188.096, 100.761 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Himanchal"]
position = Vector2( 1, 0 )
shape = SubResource( 16 )

[node name="Punjab" type="Area2D" parent="."]
position = Vector2( 154.123, 128.251 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Punjab"]
shape = SubResource( 17 )

[node name="Uttarakhand" type="Area2D" parent="."]
position = Vector2( 226.941, 139.518 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Uttarakhand"]
shape = SubResource( 18 )

[node name="Haryana" type="Area2D" parent="."]
position = Vector2( 165.796, 155.514 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Haryana"]
shape = SubResource( 19 )

[node name="Delhi" type="Area2D" parent="."]
position = Vector2( 181.92, 174.425 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Delhi"]
shape = SubResource( 20 )

[node name="Uttar Pradesh" type="Area2D" parent="."]
position = Vector2( 256.72, 217.947 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Uttar Pradesh"]
shape = SubResource( 21 )

[node name="Madhya Pradesh" type="Area2D" parent="."]
position = Vector2( 203.156, 288.969 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Madhya Pradesh"]
shape = SubResource( 22 )

[node name="Bihar" type="Area2D" parent="."]
position = Vector2( 351.228, 242.306 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bihar"]
shape = SubResource( 23 )

[node name="Sikkim" type="Area2D" parent="."]
position = Vector2( 413.088, 178.438 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sikkim"]
shape = SubResource( 24 )

[node name="Meghalaya" type="Area2D" parent="."]
position = Vector2( 455.468, 234.821 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meghalaya"]
shape = SubResource( 25 )

[node name="Arunachal" type="Area2D" parent="."]
position = Vector2( 509.162, 180.248 )
rotation = 1.0472
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arunachal"]
shape = SubResource( 26 )

[node name="Assam" type="Area2D" parent="."]
position = Vector2( 477.197, 217.59 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Assam"]
shape = SubResource( 27 )

[node name="Nagaland" type="Area2D" parent="."]
position = Vector2( 548.653, 224.274 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nagaland"]
shape = SubResource( 28 )

[node name="Manipur" type="Area2D" parent="."]
position = Vector2( 544.422, 252.546 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Manipur"]
shape = SubResource( 29 )

[node name="Tripura" type="Area2D" parent="."]
position = Vector2( 453.095, 291.482 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tripura"]
shape = SubResource( 30 )

[node name="Mizoram" type="Area2D" parent="."]
position = Vector2( 528.666, 277.293 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mizoram"]
shape = SubResource( 31 )

[node name="Jharkhand" type="Area2D" parent="."]
position = Vector2( 341.697, 273.951 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jharkhand"]
shape = SubResource( 32 )

[node name="West Bengal" type="Area2D" parent="."]
position = Vector2( 394.385, 289.052 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="West Bengal"]
shape = SubResource( 33 )

[node name="Chhattisgarh" type="Area2D" parent="."]
position = Vector2( 285.501, 306.223 )
rotation = 0.837758
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chhattisgarh"]
shape = SubResource( 34 )

[node name="Odisa" type="Area2D" parent="."]
position = Vector2( 323.47, 337.974 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Odisa"]
shape = SubResource( 35 )

[node name="Maharashtra" type="Area2D" parent="."]
position = Vector2( 143.966, 370.708 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Maharashtra"]
shape = SubResource( 36 )

[node name="Andhra Pradesh" type="Area2D" parent="."]
position = Vector2( 216.849, 451.74 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Andhra Pradesh"]
rotation = -0.888373
shape = SubResource( 37 )

[node name="Goa" type="Area2D" parent="."]
position = Vector2( 84.5718, 445.224 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goa"]
shape = SubResource( 38 )

[node name="Karnataka" type="Area2D" parent="."]
position = Vector2( 147.676, 480.92 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Karnataka"]
shape = SubResource( 39 )

[node name="Tamil Nadu" type="Area2D" parent="."]
position = Vector2( 193.584, 533.398 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tamil Nadu"]
shape = SubResource( 40 )

[node name="Kerala" type="Area2D" parent="."]
position = Vector2( 154.217, 552.396 )
rotation = -0.628319
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kerala"]
shape = SubResource( 41 )

[node name="Telangana" type="Area2D" parent="."]
position = Vector2( 210.772, 402.971 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Telangana"]
shape = SubResource( 42 )

[connection signal="pressed" from="A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="B" to="." method="_on_B_pressed"]
[connection signal="pressed" from="C" to="." method="_on_C_pressed"]
[connection signal="pressed" from="D" to="." method="_on_D_pressed"]
[connection signal="input_event" from="Gujarat" to="." method="_on_Gujarat_input_event"]
[connection signal="input_event" from="Rajasthan" to="." method="_on_Rajasthan_input_event"]
[connection signal="input_event" from="Jammu" to="." method="_on_Jammu_input_event"]
[connection signal="input_event" from="Himanchal" to="." method="_on_Himanchal_input_event"]
[connection signal="input_event" from="Punjab" to="." method="_on_Punjab_input_event"]
[connection signal="input_event" from="Uttarakhand" to="." method="_on_Uttarakhand_input_event"]
[connection signal="input_event" from="Haryana" to="." method="_on_Haryana_input_event"]
[connection signal="input_event" from="Delhi" to="." method="_on_Delhi_input_event"]
[connection signal="input_event" from="Uttar Pradesh" to="." method="_on_Uttar_Pradesh_input_event"]
[connection signal="input_event" from="Madhya Pradesh" to="." method="_on_Madhya_Pradesh_input_event"]
[connection signal="input_event" from="Bihar" to="." method="_on_Bihar_input_event"]
[connection signal="input_event" from="Sikkim" to="." method="_on_Sikkim_input_event"]
[connection signal="input_event" from="Meghalaya" to="." method="_on_Meghalaya_input_event"]
[connection signal="input_event" from="Arunachal" to="." method="_on_Arunachal_input_event"]
[connection signal="input_event" from="Assam" to="." method="_on_Assam_input_event"]
[connection signal="input_event" from="Nagaland" to="." method="_on_Nagaland_input_event"]
[connection signal="input_event" from="Manipur" to="." method="_on_Manipur_input_event"]
[connection signal="input_event" from="Tripura" to="." method="_on_Tripura_input_event"]
[connection signal="input_event" from="Mizoram" to="." method="_on_Mizoram_input_event"]
[connection signal="input_event" from="Jharkhand" to="." method="_on_Jharkhand_input_event"]
[connection signal="input_event" from="West Bengal" to="." method="_on_West_Bengal_input_event"]
[connection signal="input_event" from="Chhattisgarh" to="." method="_on_Chhattisgarh_input_event"]
[connection signal="input_event" from="Odisa" to="." method="_on_Odisa_input_event"]
[connection signal="input_event" from="Maharashtra" to="." method="_on_Maharashtra_input_event"]
[connection signal="input_event" from="Andhra Pradesh" to="." method="_on_Andhra_Pradesh_input_event"]
[connection signal="input_event" from="Goa" to="." method="_on_Goa_input_event"]
[connection signal="input_event" from="Karnataka" to="." method="_on_Karnataka_input_event"]
[connection signal="input_event" from="Tamil Nadu" to="." method="_on_Tamil_Nadu_input_event"]
[connection signal="input_event" from="Kerala" to="." method="_on_Kerala_input_event"]
[connection signal="input_event" from="Telangana" to="." method="_on_Telangana_input_event"]
